# obsidian-mcp

./: .env.example  CLAUDE.md  README.md  pyproject.toml
src/obsidian_mcp/: config.py  frontmatter_utils.py  server.py  vault.py
tests/: test_vault.py
