[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "python-frontmatter",
    "pydantic>=2",
]

[project.scripts]
obsidian-mcp = "obsidian_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
